--- a/source/stylesheets/_video.css.scss
+++ b/source/stylesheets/_video.css.scss
@@ -1,7 +1,11 @@
 #top-level-wrapper.video > .container {
   position: relative;
   top: 50%;
-  transform: translateY(-55%);
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
 }
 
 #main-video {
