--- a/source/stylesheets/theme/_quotes.scss
+++ b/source/stylesheets/theme/_quotes.scss
@@ -12,8 +12,7 @@ section#quotes {
   }
 
   .image-bg {
-    background: $parallax-quote-background;
-    background-size: cover;
+    background-image: $parallax-quote-background;
   }
 
   p {
